--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget15/mixed-widget15.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget15/mixed-widget15.component.html
@@ -1,6 +1,7 @@
 <br>
 <form [formGroup]="shiftForm">
   <div class="row">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <!-- <div class="col-md-1"></div> -->
     <div class="col-auto">
       <label><b>Select Shift :</b></label>
@@ -70,6 +71,7 @@
   </div>
   <br>
   <div class="table-responsive mb-0">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <table id="excel-table" class="table table-centered table-nowrap">
       <thead class="table-light">
         <tr>
